# EcoSmart

./: .gitignore  README.md  flame3_analysis.ipynb  pdm_analysis.ipynb  requirements.txt
esp32_firmware/: CMakeLists.txt  README.md  export_model_to_c.py  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.example  validate_c_vs_pytorch.py
esp32_firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.c  mqtt_manager.c  mqtt_manager.h  sensor_sim.c  sensor_sim.h  sensor_transformer.c  sensor_transformer.h  transformer_weights.h  wifi_manager.c  wifi_manager.h
esp32_firmware/main/certs/: aws_root_ca.pem  device_cert.pem  device_key.pem
flame3_finetune/: README.md  RUNBOOK_H100.md
flame3_finetune/configs/: flame3_finetune.yaml  flame3_finetune_lora.yaml
flame3_finetune/data/: labels.csv  split.csv  test.jsonl  train.jsonl
flame3_finetune/scripts/: build_jsonl.py  compare_results.py  evaluate.py  generate_labels.py  make_split.py  plot_training.py  prompts.py
infrastructure/: Makefile  README.md  template.yaml
infrastructure/mcp_lambda/: handler.py
infrastructure/scripts/: ug_simulator.py  upload_data.sh
infrastructure/tables/: alerts.sql  process_readings.sql  sensor_readings.sql
predictive_maintenance/: attention_viz.py  dataset.py  evaluate.py  evaluate_transformer.py  model.py  plots.py  plots_transformer.py  preprocess.py  train.py  train_transformer.py
predictive_maintenance/data/: ai4i2020.csv
predictive_maintenance/models/: meta.json  scaler.pkl  transformer_best.pt  transformer_config.json  transformer_stats.pkl
(+13 files in other folders)
